--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@200;400&family=Roboto:wght@300;400;700&family=Yeseva+One&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Lexend+Deca:wght@200;400&family=Roboto:wght@300;400;700&family=Yeseva+One&display=swap" rel="stylesheet">
 
     <!-- css-link-here -->
     <link rel="stylesheet" href="style.css">
@@ -23,10 +23,45 @@
             </div>
             <p>Hey! I am Fahim. I am learning web development with pogramming hero and This is my 1st Assignment in this course.This assignment is going to be a challenge for me.Let's Start.But hopefully I can do it inshallah.</p>
             <button><a href="#" target="_blank">Let's Start</a></button>
+            <p>Scroll down to explore more about us</p>
         </div>
         <div class="right-header">
             <div class="profile-photo">
                 <img src="images/person/person-2.png" alt="profile-photo">
+            </div>
+        </div>
+    </section>
+    <!-- header-section-is-ended -->
+
+    <!-- mission-section-is-started -->
+    <section class="mission-section">
+        <div class="title">
+            <h2>My Mission in <span class="year">2022</span></h2>
+        </div>
+        <div class="parent-box">
+            <div class="box-design box1">
+                <img src="images/illustrators/illustrator-1.png" alt="Mission">
+                <h3>Mission</h3>
+                <p>Amet minim mollit non deserunt
+                 ullamco est sit aliqua dolor do amet
+                 sint. Velit officia consequat duis enim
+                 velit mollit.</p>
+            </div>
+            <div class="box-design box2">
+                <img src="images/illustrators/illustrator-2.png" alt="">
+                <h3>Vission</h3>
+                <p>Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim
+                    velit mollit.</p>
+            </div>
+            <div class="box-design box3">
+                <img src="images/illustrators/illustrator-3.png" alt="">
+                <h3>Goal</h3>
+                <p>Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim
+                    velit mollit.</p>
             </div>
         </div>
     </section>
