--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <div class="title">
                 <h1>Stay Focused on <br> <span class="colorful">Mission 2022</span></h1>
             </div>
-            <p>Hey! I am Fahim. I am learning web development with pogramming hero and This is my 1st Assignment in this course.This assignment is going to be a challenge for me.Let's Start.But hopefully I can do it inshallah.</p>
-            <button><a href="#" target="_blank">Let's Start</a></button>
+            <p>Hey! I am Fahim. I am learning web development with pogramming hero and This is my 1st Assignment in this course.This assignment is going to be a challenge for me.But hopefully I can do it inshallah.</p>
+            <button class="btn"><a href="#" target="_blank" class="hyper-link">Let's Start</a></button>
             <p>Scroll down to explore more about us</p>
         </div>
         <div class="right-header">
@@ -35,8 +35,8 @@
 
     <!-- mission-section-is-started -->
     <section class="mission-section">
-        <div class="title">
-            <h2>My Mission in <span class="year">2022</span></h2>
+        <div class="all-title-h2">
+            <h2>My Mission in <span class="colorfull">2022</span></h2>
         </div>
         <div class="parent-box">
             <div class="box-design box1">
@@ -65,5 +65,67 @@
             </div>
         </div>
     </section>
+    <!-- mission-section-is-ended -->
+
+    <!-- no-limit-develop-section-is-started -->
+
+    <section class="developing-section same-section">
+        <div class="left-side-photo">
+            <img src="images/pictures/coding.png" alt="Image">
+        </div>
+        <div class="right-side-text">
+            <h3>Develop <br> Without Limit</h3>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An
+                mundi noster pri, ea eos quas expetendis scripserit, affert gubergren
+                dissentias et cum.</p>
+            <button class="btn"><a href="#" target="_blank" class="hyper-link">Read the Documentation</a></button>
+        </div>
+    </section>
+
+    <!-- no-limit-develop-section-is-ended -->
+
+    <!-- community-section-started  -->
+    <section class="community-section same-section">
+        <div class="left-side-text">
+            <h3>Know our <br> Global Community</h3>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An
+                mundi noster pri, ea eos quas expetendis scripserit, affert gubergren
+                dissentias et cum.</p>
+            <button class="btn"><a href="#" target="_blank" class="hyper-link">Read the Documentation</a></button>
+        </div>
+        <div class="right-side-photo">
+            <img src="images/pictures/project.png" alt="Image">
+        </div>
+    </section>
+    <!-- community-section-ended  -->
+    
+    <!-- journey-section-started -->
+    <section class="journey-with-pg-hero ">
+        <div class="all-title-h2"><h2>My Journey With <span class="colorfull">Programming Hero</span></h2></div>
+        <div class="journey-contents same-section">
+            <div class="left-side">
+                <img src="images/illustrators/download.png" alt="Image">
+            </div>
+            <div class="right-side">
+                <h3>Develop <br> Without Limit</h3>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                    deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An
+                    mundi noster pri, ea eos quas expetendis scripserit, affert gubergren
+                    dissentias et cum.</p>
+                    <p>See more about Programming hero course click the button below</p>
+                <button class="btn"><a href="#" target="_blank" class="hyper-link">Read the Documentation</a></button>
+            </div>
+        </div>
+    </section>
+    <!-- journey-section-ended -->
+
+    <!-- Footer-section-started -->
+    <footer>
+        <div class=""><h3>Mission <span class="colorfull">2022</span></h3></div>
+        <p>Hard work, Perseverance, and Determination for 2022</p>
+    </footer>
+    <!-- Footer-section-ended -->
 </body>
 </html>
