--- a/index.html
+++ b/index.html
@@ -42,26 +42,18 @@
             <div class="box-design box1">
                 <img src="images/illustrators/illustrator-1.png" alt="Mission">
                 <h3>Mission</h3>
-                <p>Amet minim mollit non deserunt
-                 ullamco est sit aliqua dolor do amet
-                 sint. Velit officia consequat duis enim
-                 velit mollit.</p>
+                <p>My mission was started from january 2022. And it will continue for four months.These four months I will continue to work hard.</p>
             </div>
             <div class="box-design box2">
                 <img src="images/illustrators/illustrator-2.png" alt="">
                 <h3>Vission</h3>
-                <p>Amet minim mollit non deserunt
-                    ullamco est sit aliqua dolor do amet
-                    sint. Velit officia consequat duis enim
-                    velit mollit.</p>
+                <p>My mission was started from january 2022. And it will continue for four months.These four months I will continue to work hard.</p>
             </div>
             <div class="box-design box3">
                 <img src="images/illustrators/illustrator-3.png" alt="">
                 <h3>Goal</h3>
-                <p>Amet minim mollit non deserunt
-                    ullamco est sit aliqua dolor do amet
-                    sint. Velit officia consequat duis enim
-                    velit mollit.</p>
+                <p>After finishing the main course, I came and wanted to join SCIC and 
+                    I want to build myself as a fullStack junior web developer</p>
             </div>
         </div>
     </section>
@@ -75,10 +67,8 @@
         </div>
         <div class="right-side-text">
             <h3>Develop <br> Without Limit</h3>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-                deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An
-                mundi noster pri, ea eos quas expetendis scripserit, affert gubergren
-                dissentias et cum.</p>
+            <p>After completing the course I will become a dedicated web developer and time maintainer.
+                During the course I will try very hard to become a dedicated web developer and researcher.</p>
             <button class="btn"><a href="#" target="_blank" class="hyper-link">Read the Documentation</a></button>
         </div>
     </section>
@@ -89,10 +79,7 @@
     <section class="community-section same-section">
         <div class="left-side-text">
             <h3>Know our <br> Global Community</h3>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-                deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An
-                mundi noster pri, ea eos quas expetendis scripserit, affert gubergren
-                dissentias et cum.</p>
+            <p>After completing the course I will become a dedicated web developer and time maintainer. During the course I will try very hard to become a dedicated web developer and researcher.</p>
             <button class="btn"><a href="#" target="_blank" class="hyper-link">Read the Documentation</a></button>
         </div>
         <div class="right-side-photo">
@@ -109,13 +96,11 @@
                 <img src="images/illustrators/download.png" alt="Image">
             </div>
             <div class="right-side">
-                <h3>Develop <br> Without Limit</h3>
-                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-                    deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An
-                    mundi noster pri, ea eos quas expetendis scripserit, affert gubergren
-                    dissentias et cum.</p>
-                    <p>See more about Programming hero course click the button below</p>
-                <button class="btn"><a href="#" target="_blank" class="hyper-link">Read the Documentation</a></button>
+                <h3>Develop Myself As <br> <span class="colorfull">Junior Web Developer</span></h3>
+                <p>In this year I will stay focus in my mission which already started 1st January. Thats why I erolled Programming Hero Batch 5.Hopefully this course will be help me out to be a dedicated web developer in future.</p>
+                <br><br>
+                    <span class="pragraph">See more about Programming hero course click the button below</span>
+                <button class="btn"><a href="https://web.programming-hero.com/" target="_blank" class="hyper-link">Read the Documentation</a></button>
             </div>
         </div>
     </section>
